--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.0",
     "@mui/styles": "^5.8.0",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
